# hollywood_pub_sub

./: .buildinfo  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.html  CHANGELOG.md  Dockerfile  README.html  README.md  changelog.html  genindex.html  hollywood_pub_sub.html  index.html  modules.html  objects.inv  purpose.html  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  test.xml
.doctrees/: CHANGELOG.doctree  README.doctree  changelog.doctree  environment.pickle  hollywood_pub_sub.doctree  index.doctree  modules.doctree  purpose.doctree  readme.doctree
.github/workflows/: .github-ci.yml  run-main.yml
_sources/: CHANGELOG.md.txt  README.md.txt  hollywood_pub_sub.rst.txt  index.rst.txt  modules.rst.txt  purpose.rst.txt
docs/source/: changelog.rst  conf.py  index.rst  readme.rst
scripts/: generate_db_json_file.py  validate_movie_database_json.py
src/hollywood_pub_sub/: __init__.py  logger.py  main.py  movie.py  movie_database.json  movie_database.py  movie_database_factory.py  movie_database_from_api.py  movie_database_from_json.py  publisher.py  settings.py  subscriber.py
tests/: __init__.py  conftest.py  test_main.py  test_movie.py  test_movie_database.py  test_movie_database_factory.py  test_movie_database_from_api.py  test_movie_database_from_json.py  test_publisher.py  test_subscriber.py
tests/fixtures/: movie_database.json
