[project]
name = "hollywood_pub_sub"
version = "0.1.0"
description = "A publisher-subscriber game between directors and composers"
authors = [
    {name = "Clement Burtscher", email = "clement.burtscher@laposte.net"},
]
dependencies = [
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "pydantic-settings>=2.10.1",
    "typer>=0.16.0"
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

# CLI entry point using typer with subcommands
[project.scripts]
hollywood_pub_sub = "hollywood_pub_sub.main:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1"
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
fallback_version = "0.1.0.dev"

[tool.pdm.scripts]
# Test script: runs sync with test deps and full pytest with coverage
test.composite = [
  "{pdm} sync -dG test",
  "pytest --cov=src --verbose --junit-xml=test.xml --cov-report=xml:coverage.xml --cov-report=term {args:tests} -o log_cli=true -o log_cli_level=DEBUG -vvv"
]
