[project]
name = "hollywood_pub_sub"
version = "0.1.0"
description = "A publisher-subscriber game between directors and composers"
authors = [
    {name = "Clement Burtscher", email = "clement.burtscher@laposte.net"},
]
dependencies = [
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "pydantic-settings>=2.10.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

# CLI entry point using typer with subcommands
[project.scripts]
hollywood_pub_sub = "hollywood_pub_sub.main:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pre-commit>=4.2.0",
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1"
]
doc = [
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
fallback_version = "0.1.0.dev"

[tool.pdm.scripts]
# Test script: runs sync with test deps and full pytest with coverage
test.composite = [
  "{pdm} sync -dG test",
  "pytest --cov=src --verbose --junit-xml=test.xml --cov-report=xml:coverage.xml --cov-report=term {args:tests} -o log_cli=true -o log_cli_level=DEBUG -vvv"
]
validate-json = "python scripts/validate_movie_database_json.py"
# This generates .rst files from your Python modules using Sphinx autodoc
generate-docs = "sphinx-apidoc -o docs/source src"
# This builds HTML documentation from the source files
build-docs = "sphinx-build -b html docs/source docs/build"
# Composite command that runs both generation and build
doc = { composite = ["generate-docs", "build-docs"] }
